# matsya

./: .gitignore  README.md  pyproject.toml
src/econ_ark_matsya.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/matsya/: __init__.py  cli.py  client.py  config.py
