[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "econ-ark-matsya"
version = "0.1.0"
description = "CLI and Python API for the Matsya research RAG"
requires-python = ">=3.10"

[project.scripts]
matsya = "matsya.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
